# guardog

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
.conan/: build.py
.travis/: cmake.sh  install.sh  run.sh
include/: ArgumentException.hpp  ArgumentIncorrectTypeException.hpp  ArgumentNullException.hpp  Exception.hpp  Guard.hpp
src/: ArgumentException.cpp  ArgumentIncorrectTypeException.cpp  ArgumentNullException.cpp  CMakeLists.txt  Exception.cpp
tests/: CMakeLists.txt
tests/ArgumentIncorrectTypeExceptionTests/: CMakeLists.txt  Program.cpp
tests/ArgumentNullExceptionTests/: CMakeLists.txt  Program.cpp
tests/PackageTest/: CMakeLists.txt  Program.cpp
tests/UnitTests/: ArgumentIncorrectTypeExceptionTests.cpp  ArgumentNullExceptionTests.cpp  CMakeLists.txt
